--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                 <p class="text-xs text-gray-500">Projeto Escolar &copy; 2025</p>
             </div>
             <div class="flex items-center gap-4">
-                <p class="text-sm text-gray-300 hidden sm:block">Apoie o projeto:</p>
-                <a href="#" id="footerPixLink" class="text-blue-500 hover:text-blue-400 font-bold transition-colors">PIX</a>
+                <a href="#" id="footerPixLink" class="text-blue-500 hover:text-blue-400 font-bold transition-colors text-sm">Apoie aqui</a>
                 <a href="https://www.instagram.com/g.gomszz/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
                         <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
